# 3321tpl-multi-layer_perceptron

./: README.md  cifar10-mlp-numpy.ipynb  mlp.ipynb  multi-layer_neural_network.ipynb  pyproject.toml
