[project]
name = "fashionmlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "ipykernel>=6.30.1",
  "kagglehub>=0.3.13",
  "matplotlib>=3.10.6",
  "numpy>=2.3.2",
  "pandas>=2.3.3",
  "scikit-learn>=1.7.2",
  "torch>=2.8.0",
  "torchvision>=0.23.0",
]
